# bateman-equations-project

./: CMakeLists.txt  Nucleus.cpp  README.md  Reader.cpp  SolveBateman.cpp  execBateman.cpp  radon222.txt
include/: Nucleus.h  NumericalMethod.h  Reader.h  SolveBateman.h
src/: NumericalMethod.cpp  main.cpp
